Revising LL